# rust-blog-backend-app

./: .env  Cargo.toml  blog.db
migrations/2024-03-29-163408_create_posts_and_users/: up.sql
migrations/2024-04-07-205408_create_posts/: up.sql
src/: main.rs  models.rs  posts.rs  schema.rs
src/api/: mod.rs
