[package]
name = "rust-blog-backend-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
actix-rt = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
diesel = { version = "2.1.0", features = ["sqlite", "r2d2", "chrono"] }
r2d2 = "0.8.10"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
diesel_migrations = "2.1.0"
